# python-kata

./: .editorconfig  .gitignore  .pylintrc  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  ruff.yml
src/ESA_mars_rover/: README.md  kata.py
src/ESA_mars_rover/test/: test_kata.py
src/character_copier/: kata.py
src/character_copier/test/: test_kata.py
src/esa_mars_rover/: kata.py
src/esa_mars_rover/test/: test_kata.py
src/fibonacci/: README.md  kata.py
src/fibonacci/test/: test_kata.py
src/fizz_buzz/: README.md  kata.py
src/fizz_buzz/test/: test_kata.py
src/fizz_buzz/tests/: test_kata.py
src/gilded_rose/: kata.py
src/gilded_rose/test/: test_gilded_rose.py
src/gilded_rose/tests/: test_gilded_rose.py
src/leap_year/: README.md  kata.py
src/leap_year/test/: test_kata.py
src/london_tic_tac_toe/: README.md  kata.py
src/london_tic_tac_toe/test/: test_kata.py
src/mars_rover/: README.md  kata.py
src/mars_rover/test/: test_kata.py
src/mars_rover/tests/: test_kata.py
src/prime_factors/: README.md  kata.py
src/prime_factors/test/: test_kata.py
src/prime_factors/tests/: test_kata.py
src/raid/: README.md  kata.py
src/raid/test/: test_kata.py
src/roman_numerals/: README.md  kata.py
src/roman_numerals/test/: test_kata.py
src/smelly_tic_tac_toe/: kata.py
src/smelly_tic_tac_toe/test/: test_kata.py
src/social_network/: README.md  kata.py
src/stack_kata/: README.md  kata.py
src/stack_kata/test/: test_kata.py
src/stack_kata/tests/: test_kata.py
src/tennis/: README.md  kata.py
src/tennis/test/: test_kata.py
src/tennis/tests/: test_kata.py
src/tic_tac_toe/: kata.py
src/tic_tac_toe/test/: test_kata.py
src/yahtzee/: README.md  kata.py
src/yahtzee/test/: test_kata.py
src/yahtzee/tests/: test_kata.py
