[project]
name = "python-kata"
version = "0.0.1"
description = "A collection of coding katas from [Agile Technical Practices Distilled](https://leanpub.com/agiletechnicalpracticesdistilled)"
authors = [
    { name = "Pedro M Santos", email = "pedromsantos@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "coverage>=7.8.0,<8.0.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "approvaltests>=14.5.0,<15.0.0",
    "pytest-approvaltests>=0.2.4,<1.0.0",
    "mutmut>=3.2.3,<4.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"

[tool.pytest.ini_options]
# addopts = "--cov=src --cov-report html --cov-fail-under=47"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming convetions
]
ignore = [
    "C901", # too complex
    "W191", # indentation contains tabs
    "D401", # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
