[project]
name = "python-kata"
version = "0.0.1"
requires-python = "==3.12.*"
description = "A collection of coding katas from [Agile Technical Practices Distilled](https://leanpub.com/agiletechnicalpracticesdistilled)"
authors = [
    { name = "Pedro M Santos", email = "pedromsantos@users.noreply.github.com" },
]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.9,<1.0.0",
    "pytest>=8.4.1,<10.0.0",
    "pytest-cov>=6.2.1,<8.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "approvaltests>=15.2.1,<17.0.0",
    "pytest-approvaltests>=0.2.4,<1.0.0",
    "mutmut>=3.3.1,<4.0.0",
    "pyright>=1.1.403",
    "coverage",
]

[tool.pytest.ini_options]
# addopts = "--cov=src --cov-report html --cov-fail-under=47"

[tool.ruff]
src = ["src"]
line-length = 120
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",
    "ANN001",
    "ANN201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
exclude = ["**/.venv", "**/__pycache__"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
